# modszertanprojekt

./: .gitignore  Readme.md  TODO
.gitea/workflows/: containers.yaml
components/: Dockerfile  run.bash
components/fincsi_backend/: .env.dev  Dockerfile  README.md  default.nix  docker-compose.yml  dockerfile  env.compose  env.split  manage.py  myenv.example  pyproject.toml  requirements.txt  run.bash
components/fincsi_backend/falatok/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  util.py  views.py
components/fincsi_backend/falatok/migrations/: 0001_initial.py  0002_alter_recipe_guides.py
components/fincsi_backend/fincsi_backend/: asgi.py  settings.py  urls.py  wsgi.py
components/fincsi_backend/scripts/: react_devserver.bash  run.bash  run.compose.bash  run.split.bash
components/fincsi_backend/scripts/tests/: shellcheck.bash  testenvs.bash  wtf.bash
components/fincsi_frontend/: TODO.md  package-lock.json  package.json
components/fincsi_frontend/public/: index.html
components/fincsi_frontend/src/: App.js  context.js  index.css
doc/reference/: git
infra/containers/: 0001-Revert-dockerTools-use-makeOverridable-for-buildImag.patch  DEPLOYMENT  arion-compose.nix  arion-pkgs.nix  devShell.nix  manual-build.nix
infra/containers/buildbuilderimage/: DEPLOYMENT  Dockerfile  upload.bash
infra/signalbot/: bot.py  default.nix  launch.bash  pyproject.toml
infra/signalbot/nix/: sources.json
infra/signalbot/semaphore/semaphore/: bot.py  mention.py  message.py  message_sender.py  reply.py
models/webhook/: hooktask.go
(+18 files in other folders)
